# ros2_uav_px4_sitl_tests

./: .gitignore  README.md
config/: standard_simulation.yaml
missions/: nlmpc_hit.yaml  nlmpc_hold.yaml  nlmpc_position.yaml  nlmpc_waypoint.yaml  se3_position.yaml
offboard_thrust_identification/: CMakeLists.txt  thrust_matcher.cpp  thrust_matcher.hpp
offboard_thrust_identification/config/: initials.yaml
results_analysis/: disturbance_eval.py  sanitize_data.py  tracking_quality_analysis.py
tests/: legacy_input.py  mission_executor.py  run_tests.py  test_suite.yaml
